Fixed table on mobile

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -854,10 +854,6 @@ iframe {
     border: none;
 }
 
-.skills {
-    margin: 0px;
-}
-
 .social a {
     cursor: pointer;
     font-size: 2rem;
